--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -38,15 +38,7 @@
     + Google Analytics:
     ----------------------------------------------------------------------- -->
 
-    {% block google-analytics %}<script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script><script type="text/javascript">
-    try {
-        var pageTracker = _gat._getTracker("UA-6838945-3");
-        pageTracker._trackPageview();
-    } catch(err) {}</script>
-    {% endblock %}
+    {% block google-analytics %}{% endblock %}
 
     <!-- ----------------------------------------------------------------------
     + Header:
