--- a/starwars/home/templates/index.html
+++ b/starwars/home/templates/index.html
@@ -77,6 +77,38 @@ $(document).ready (fnGalleryIconLayoutOnClick);
 </script>
 
 <!-- --------------------------------------------------------------------------
+ Gallery: Icon Vehicle
+--------------------------------------------------------------------------- -->
+
+<script type="text/javascript">
+fnGalleryIconVehicleOnClick = function () {
+    $('#icon-vehicle').click(function (event) {
+        $.post ('{% url home:ajax.show-vehicle %}', function (data) {
+            location.reload ();
+        });
+    });
+};
+
+$(document).ready (fnGalleryIconVehicleOnClick);
+</script>
+
+ <!-- --------------------------------------------------------------------------
+ Gallery: Icon Figure
+--------------------------------------------------------------------------- -->
+
+<script type="text/javascript">
+fnGalleryIconFigureOnClick = function () {
+    $('#icon-figure').click(function (event) {
+        $.post ('{% url home:ajax.show-figure %}', function (data) {
+            location.reload ();
+        });
+    });
+};
+
+$(document).ready (fnGalleryIconFigureOnClick);
+</script>
+
+<!-- --------------------------------------------------------------------------
  Gallery: Area
 --------------------------------------------------------------------------- -->
 
@@ -417,12 +449,31 @@ $(window).resize (function () {
  Menu:
 --------------------------------------------------------------------------- -->
 
-{% block menu-ext %}<td class="menu-tbl-item icons">
+{% block menu-ext %}
+<td class="menu-tbl-item icons">
+</td>
+
+<td class="menu-tbl-item icons">
+<img alt="Show Vehicles"
+     src="{{ MEDIA_URL }}ico/silk/car.png"
+     title="Show Vehicles"
+     id="icon-vehicle" />
+</td>
+
+<td class="menu-tbl-item icons">
+<img alt="Show Figures"
+     src="{{ MEDIA_URL }}ico/silk/user_suit.png"
+     title="Show Figures"
+     id="icon-figure" />
+</td>
+
+<td class="menu-tbl-item icons">
 <img alt="Toggle Layout"
      src="{{ MEDIA_URL }}ico/silk/layout.png"
      title="Toggle Layout"
      id="icon-layout" />
-</td>{% endblock %}
+</td>
+{% endblock %}
 
 <!-- --------------------------------------------------------------------------
  Sub-Top Bar:
