--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -148,7 +148,7 @@
 
 {% block java-script %}
 <script type="text/javascript" src="{{ MEDIA_URL }}lib/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.blockUI.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.blockUI.min.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/util.min.js"></script>
 {% endblock %}
 
